--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Shopping list",
   "main": "server.js",
   "scripts": {
-    "client-install": "cd Client && npm install",
+    "client-install": "cd client && npm install",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix Client",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix Client && npm run build --prefix Client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Yididya Samuel",
   "license": "ISC",
